button id change only

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id = "selector1button" onclick = "selector1()" hidden>Look for a new Issue</button>
+    <button id = "resetbutton" onclick = "resetpage()" hidden>Look for a new Issue</button>
     
     <div class = "selectormain" id = "selector1">
         <select id = "selected_primary_value">
