--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             
         </div>
     </div>
-   <footer id="Footer">Developed by Tamim Naser and SMT Emon</footer>
+    <footer id="Footer">Developed by <a href = "https://github.com/istamimnaser">Tamim Naser</a> & <a href = "https://github.com/SMTEmon">SMTEmon</a></footer>
 
     <script src="index.js"></script>
 </body>
