--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        
     </header>
     <div>
-        <h1 id="title">..ACC Setup Guide</h1>
+        <h1 id="title">ACC Setup Guide</h1>
 
         <div id = "first_container">
     
